<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_24"
            android:iconTint="@color/dark_text"
            android:textColor="@color/dark_text"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_habits"
            android:icon="@drawable/assistant_24"
            android:iconTint="@color/dark_text"
            android:textColor="@color/dark_text"
            android:title="@string/habits" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search_24"
            android:iconTint="@color/dark_text"
            android:textColor="@color/dark_text"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/person_24"
            android:iconTint="@color/dark_text"
            android:textColor="@color/dark_text"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_coaching"
            android:icon="@drawable/baseline_co_present_24"
            android:iconTint="@color/dark_text"
            android:textColor="@color/dark_text"
            android:title="@string/coaching" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_info_24"
            android:title="About" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:iconTint="@color/dark_text"
            android:textColor="@color/dark_text"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/logout_24"
            android:iconTint="@color/dark_text"
            android:textColor="@color/dark_text"
            android:title="@string/log_out" />
    </group>
</menu>